--- a/007-widgets/DESCRIPTION
+++ b/007-widgets/DESCRIPTION
@@ -2,6 +2,6 @@ Title: Widgets
 Author: RStudio, Inc.
 AuthorUrl: http://www.rstudio.com/
 License: MIT
-DisplayMode: Showcase
+DisplayMode: normal 
 Tags: getting-started
 Type: Shiny
